Fixes #3306: The checklist item checkbox and the text are not aligned correctly in the modal card page issue fixed

--- a/client/css/custom.less
+++ b/client/css/custom.less
@@ -2279,7 +2279,7 @@ footer, header, .dashboard-header {
 	}
 	.js-show-item-edit-form {
 		p {
-			margin: 0 0 5px;
+			margin: 3px 0 5px 0px;
 		}
 	}
 	label { 
